--- a/Moje-Cwiczenia/figma/19.04.21/style.css
+++ b/Moje-Cwiczenia/figma/19.04.21/style.css
@@ -83,12 +83,6 @@ ul.nav-right
     height: 18px;
 }
 
-
-/* .nav-left, .nav-3link, .nav-right
-{
-    margin-top: 2%;
-} */
-
 .content-top
 {
     display: flex;
@@ -224,35 +218,38 @@ a > span
     margin: 15vh 0;
 }
 
+.content__colL
+{
+    margin-right: 10vh;
+}
 
 .content__colL, .content__colR
 {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 25vw;
-    margin-right: 10vh;
+    width: 340px;
 }
 
-.content--row1
+.content__row1
 {
     font-size: 12px;
     color: #FBD784;
 }
 
-.content--row2, .content--row3
+.content__row2, .content__row3
 {
     margin-top: 3vh;
 }
 
 
-.content--row3 > p
+.content__row3 > p
 {
     line-height: 1.8;
     font-size: 13px;
 }
 
-.content--row4 > a
+.content__row4 > a
 {
     color: #FBD784 !important;
     margin-top: 33px;
@@ -362,26 +359,40 @@ URZĄDENIA MOBILNE
     }
 
     .content__section
-{
-    margin: 10vh 0;
-}
+    {
+        margin: 10vh 0;
+    }
+
+    .content__colL, .content__colR
+    {
+        width: 300px;
+        margin: 10vh 0;
+    }
 
     .footer
-{
-    margin: 0 2vh;
-}
+    {
+        margin: 0 2vh;
+    }
 
     .footer-left > p
-{
-    font-size: 14px;
-    margin: 2vh 0 5vh;
-}
+    {
+        font-size: 14px;
+        margin: 2vh 0 5vh;
+    }
 
     ul.footer-nav__container {margin: 0 1vh}
 
 }
 
-@media screen and (max-device-width: 360px)
+@media screen and (max-device-width: 599px)
+{
+    .content__colL--reverse
+    {
+        order: 2;
+    }
+}
+
+@media screen and (max-device-width: 375px)
 {
 
     .header
@@ -437,5 +448,22 @@ URZĄDENIA MOBILNE
     {
         margin-right: 5px;
         height: 18px;
+    }
+
+
+    .content__colL
+{
+    margin-right: 10vh;
+}
+
+    .content__colR
+{
+
+}
+
+    .content__colL, .content__colR
+    {
+        width: 300px;
+        margin: 1vh 0;
     }
 }
