--- a/Moje-Cwiczenia/figma/19.04.21/style.css
+++ b/Moje-Cwiczenia/figma/19.04.21/style.css
@@ -455,6 +455,11 @@ URZĄDENIA MOBILNE
         height: 18px;
     }
 
+    .hero > h1
+    {
+       font-size: 1.3em;
+       line-height: 1.3em;
+    }
 
     .content__colL
 {
