--- a/Moje-Cwiczenia/figma/19.04.21/style.css
+++ b/Moje-Cwiczenia/figma/19.04.21/style.css
@@ -264,6 +264,7 @@ a > span
     justify-content: space-between;
     flex-wrap: wrap;
     margin: 0 10vh;
+    padding: 10vh 0;
 }
 
 .footer-left > p
